--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Scrim</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="new_scrim_title">New Scrim Area</string>
     <string name="profileIcon">profileIcon</string>
+    <string name="title_activity_maps">Map</string>
+
 </resources>
