Add seekbar that allows user to specify size of scrim circle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="num_people">Number of people</string>
     <string name="pick_start">Pick Start Date </string>
     <string name="profileIcon">profileIcon</string>
+    <string name="size">Size</string>
     <string name="title">Title</string>
     <string name="title_activity_maps">Map</string>
     <string name="type">Type</string>
