Edit marker info should display current time/date as default start time

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="new_scrim_title">New Scrim Area</string>
     <string name="now">Now</string>
     <string name="num_people">Number of people</string>
-    <string name="pick_start">Pick Start Date </string>
+    <string name="pick_start">Change Start Time</string>
     <string name="profile_icon">profileIcon</string>
     <string name="see_more">See more</string>
     <string name="size">Size</string>
