Make login/register user interface more captivating

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,21 +3,26 @@
     <string name="addit_info">Additional Information</string>
     <string name="app_name">Scrim</string>
     <string name="color">Color</string>
+    <string name="confirm_password">Confirm Password</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+    <string name="email">Email</string>
+    <string name="login">Login</string>
     <string name="members">Members</string>
     <string name="new_scrim_title">New Scrim Area</string>
     <string name="now">Now</string>
     <string name="num_people">Number of people</string>
+    <string name="password">Password</string>
     <string name="pending">Pending Invitations</string>
     <string name="pick_start">Change Start Time</string>
     <string name="profile_icon">profileIcon</string>
+    <string name="register">Register</string>
     <string name="see_more">See more</string>
     <string name="size">Size</string>
     <string name="spot">Spots</string>
     <string name="title">Title</string>
     <string name="title_activity_maps">Map</string>
     <string name="profileIcon">profileIcon</string>
-    <string name="loginUsernameText">Username: </string>
     <string name="type">Type</string>
+    <string name="username">Username</string>
 </resources>
