Save some data to Firebase.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="profileIcon">profileIcon</string>
     <string name="loginUsernameText">Username: </string>
     <string name="type">Type</string>
+    <string name="firebase_ref">https://scrim.firebaseio.com/</string>
 </resources>
