--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="action_settings">Settings</string>
     <string name="addit_info">Additional Information</string>
-    <string name="app_name">Scrim</string>
+    <string name="app_name">Vitalize</string>
     <string name="color">Color</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="delete">Delete</string>
@@ -21,7 +21,7 @@
     <string name="size">Size</string>
     <string name="spot">Spots</string>
     <string name="title">Title</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Vitalize</string>
     <string name="profileIcon">profileIcon</string>
     <string name="type">Type</string>
     <string name="username">Username</string>
