Implement basic chat(public). Each event should be on the same chat for now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="title_activity_maps">Vitalize</string>
     <string name="profileIcon">profileIcon</string>
     <string name="type">Type</string>
+    <string name="type_msg">Type message</string>
     <string name="username">Username</string>
     <string name="firebase_ref">https://scrim.firebaseio.com/</string>
 </resources>
