Update firebase url, add creator to group as member

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,6 @@
     <string name="type">Type</string>
     <string name="type_msg">Type message</string>
     <string name="username">Username</string>
-    <string name="firebase_ref">https://scrim.firebaseio.com/</string>
+    <string name="firebase_ref">https://vitalize.firebaseio.com/</string>
 
 </resources>
