Google map's default location is now Seattle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="type_msg">Type message</string>
     <string name="username">Username</string>
     <string name="firebase_ref">https://vitalize.firebaseio.com/</string>
+    <string name="zip">Zip Code</string>
 
 </resources>
